--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "aws-amplify": "^6.14.1",
     "aws-sdk": "^2.1692.0",
+    "chart.js": "^4.4.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.4.1",
